2007-03-15  Graham Cobb  <g+gpe@cobb.uk.net>

    * debian/control: add gpe-icons to dependencies

2007-03-13  Graham Cobb  <g+gpe@cobb.uk.net>

    * debian/control: fix Depends: to use shlibs

2006-07-31  Florian Boor  <florian.boor@kernelconcepts.de>

    * Release version 0.56
    * Update dependencies
    * autogen.sh: Create empty po/Changelog.
    * configure.ac: Add libgpepimc to dependencies.
    * list-ui.c, todo.h: Add category colour row.
    * po/Makefile.in.in: removed.

2006-07-29  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c, list-ui.c: Update to HildonProgram / HildonWindow. Fullscreen
      operation support.
    * configure.ac: Version to 0.56

2006-06-10  Florian Boor  <florian.boor@kernelconcepts.de>

	* main.c, hildon/*: Make Maemo 2.0 compatible, get rid of old crap.
	* Makefile.am: Update to work without shipping package stuff in the
dist archive.

2006-03-07  Florian Boor  <florian.boor@kernelconcepts.de>
	* Makefile.am: Do not ship debian package support in the
                   distribution because of conflicting package types.

2005-11-29  Florian Boor  <florian.boor@kernelconcepts.de>

	* Release version 0.55.

2005-11-25  Florian Boor  <florian.boor@kernelconcepts.de>

	* todo.h, main.c, todo-ui.c, list-ui.c: Some cleanups and fixed casting to 
	                                        avoid runtime warnings.

2005-11-21  Florian Boor  <florian.boor@kernelconcepts.de>

	* todo-ui.c: Use a buttonbox in hildon env to work around ugly themed button
	             sizes.
      list-ui.c: Fix runtime warning.

2005-10-19  Florian Boor  <florian.boor@kernelconcepts.de>
	* hildon/*.in: Rename service and service file.
	* debian/*: One more update of locations and dependencies.
	* main.c: Change pixmaps locations on maemo platform.

2005-08-15  Florian Boor  <florian.boor@kernelconcepts.de>

	* debian/rules: Change package prefix to meet latest hildon requirements.
	* list-ui.c: Change path to hildon icons.
