@@ -1,3 +1,8 @@
+2007-11-03  Graham Cobb  <g+770@cobb.uk.net>
+
+	* configure.ac, Makefile.am, main.c, list-ui.c: build and compile
+	changes for new hildon libraries in chinook
+
 2007-03-15  Graham Cobb  <g+gpe@cobb.uk.net>
 
     * debian/control: add gpe-icons to dependencies
